--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.bunny.net/css?family=monoton:400');
+@import url('https://fonts.bunny.net/css?family=abril-fatface:400');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
